--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/MusicRegister.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.Sparare.jar=G:\\Stuff\\Java\\Sprare\\xml-saver-thing\\dist\\Sparare.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.Sparare.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -53,7 +55,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=musicregister.MusicRegister
+main.class=musicregister.Window
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
